--- a/dev/scss/_layout.scss
+++ b/dev/scss/_layout.scss
@@ -1,80 +1,160 @@
 //  ## LAYOUT  ----------------------------------------------------------------------//
 
+* {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+a,
+:focus {
+    outline: none !important;
+}
 
 html {
+    background-color: #1A1D22;
     height: 100%;
 }
 
 body {
-    background-color: #001;
+    background: #1A1D22;
     font-size: 100%;
-    height: 100%;
+    min-height: 100%;
 }
 
 .container {
     height: 100%;
-    overflow: hidden;
     position: relative;
-    width: 100%;
+    z-index: 2;
 }
 
-.main {
-    display: table;
-    height: 100%;
-    width: 100%;
-}
-
-canvas {
-    position: absolute;
-    bottom: -200px;
-    left: 50%;
-    margin-left: -500px;
-    transition: bottom 6s ease-out;
-}
-
-.start {
-    bottom: -500px;
+main {
+    padding: 100px 0;
+    position: relative;
 }
 
 .content {
-    display: table-cell;
-    vertical-align: middle;
-    margin-top: -100px;
+    margin: 0 auto;
+    max-width: 560px;
+    padding: 0 15px;
+    text-align: left;
 }
 
-.content:after {
-    display: block;
-    position: absolute;
-    top: 100px;
-    left: 50%;
-    margin-left: -356px;
-    border-radius: 100%;
-    border: 1px solid #999;
-    width: 700px;
-    height: 700px;
-    content: '';
-    box-sizing: border-box;
-    box-shadow: 0 0 1px 10px rgba(0,0,0,1),
-        0 0 1px 11px rgba(255,255,255,0.8),
-        0 0 1px 20px rgba(0,0,0,1),
-        0 0 1px 21px rgba(255,255,255,0.7),
-        0 0 1px 30px rgba(0,0,0,1),
-        0 0 1px 31px rgba(255,255,255,0.6),
-        0 0 1px 40px rgba(0,0,0,1),
-        0 0 1px 41px rgba(255,255,255,0.5),
-        0 0 1px 50px rgba(0,0,0,1),
-        0 0 1px 51px rgba(255,255,255,0.4),
-
-        0 0 0 310px rgba(0,0,0,1);
+.background {
+    background: linear-gradient(#727376, #1A1D22);
+    height: 100%;
+    left: 0;
+    opacity: 0.4;
+    position: fixed;
+    top: 0;
+    width: 100%;
     z-index: 1;
 }
 
-h1 {
-    margin-top: -50px
+
+/*  ## LAYOUT  ----------------------------------------------------------------------*/
+
+.js.csstransitions body {
+    opacity: 0;
+    transition: opacity 0.6s;
 }
 
-h2 {
-    position: relative;
-    top: -60px;
+.js.csstransitions.loaded body {
+    opacity: 1;
+}
 
+.js.csstransitions main {
+    transform: translate3d(0, 0, 0);
+    transition: transform 0.5s, opacity 0.5s;
+}
+
+.js.csstransitions .show-menu main {
+    transform: translate3d(-200px, 0, 0);
+}
+
+.js.csstransitions .content {
+    opacity: 0;
+    transform: translate3d(-200px, 0, 0);
+}
+
+.js.csstransitions .content.loaded,
+.js.csstransitions .content.new {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+    transition: opacity 0.3s, transform 0.3s;
+}
+
+
+/*  ## LAYOUT  ----------------------------------------------------------------------*/
+
+@media screen and (min-width: 590px) {
+
+    .content {
+        margin: 0;
+    }
+}
+
+@media screen and (min-width: 690px) {
+
+    .js.csstransitions .show-menu main {
+        transform: translate3d(-100px, 0, 0);
+    }
+}
+
+@media screen and (min-width: 790px) {
+
+    .content {
+        margin: 0 0 0 30px;
+    }
+
+    .js.csstransitions .show-menu main {
+        transform: translate3d(-50px, 0, 0);
+        transition: transform 0.5s, opacity 0.5s;
+    }
+
+    .js.csstransitions .content.loaded,
+    .js.csstransitions .content.new {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+        transition: opacity 0.5s, transform 0.5s;
+    }
+}
+
+@media screen and (min-width: 840px) {
+
+    .content {
+        margin: 0 0 0 60px;
+    }
+
+    .js.csstransitions main,
+    .js.csstransitions .show-menu main {
+        transform: translate3d(0, 0, 0);
+        transition: transform 0.7s, opacity 0.7s;
+    }
+
+    .js.csstransitions .content.loaded,
+    .js.csstransitions .content.new {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+        transition: opacity 0.7s, transform 0.7s;
+    }
+}
+
+@media screen and (min-width: 940px) {
+
+    .content {
+        margin: 0 0 0 90px;
+    }
+}
+
+@media screen and (min-width: 990px) {
+
+    .content {
+        margin: 0 0 0 120px;
+    }
+}
+
+@media screen and (min-width: 1040px) {
+
+    .content {
+        margin: 0 auto;
+    }
 }
