--- a/dev/src/templates/partials/header.hbs
+++ b/dev/src/templates/partials/header.hbs
@@ -3,7 +3,7 @@
             <div class="branding"><a href="/"><img src="/assets/images/logo.png" width="100" height="50" alt="AKQA logo"></a></div>
 
             <nav role="navigation">
-                <ul>
+                <ul id="menu">
                     <li class="nav-home"><a href="/">Home</a></li>
                     <li class="nav-sample"><a href="/sample-page/">Sample Page</a></li>
                 </ul>
