Fixed links to new pages

--- a/dev/src/templates/layouts/page.hbs
+++ b/dev/src/templates/layouts/page.hbs
@@ -3,19 +3,14 @@
         <main class="main" id="main" data-page="{{this.pageid}}">
 {{> body }}
         </main>
-
-        <div id="sidebar">
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/thoughts/">Thoughts</a></li>
-                    <li><a href="/experience/">Experience</a></li>
-                </ul>
-            </nav>
-        </div>
-
-        <div id="showNav"></div>
-
     </div>
-    <div class="background"></div>
+
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/feed/">Feed</a></li>
+            <li><a href="/work/">Work</a></li>
+        </ul>
+    </nav>
+
 {{> bottom }}
