--- a/dev/scss/_module.navigation.scss
+++ b/dev/scss/_module.navigation.scss
@@ -1,103 +1,49 @@
 //  ## MODULE - NAVIGATION  ---------------------------------------------------------//
 
-
-#sidebar {
+nav {
+    left: 0;
     position: fixed;
     right: 0;
-    transform: translate3d(200px, 0, 0);
-    transition: transform 0.3s 0.05s;
     top: 0;
-    width: 200px;
-}
-
-.show-menu #sidebar {
-    transform: translate3d(0, 0, 0);
+    z-index: 3;
 }
 
 nav ul {
-    padding: 68px 0 0;
+    display: flex;
     margin: 0;
+    padding: 0;
 }
 
 nav li {
+    flex-grow: 1;
     list-style: none;
     overflow: hidden;
-    padding: 0 0 20px;
 }
-
-#showNav {
-    height: 44px;
-    position: fixed;
-    right: 10px;
-    top: 10px;
-    width: 44px;
-    z-index: 2;
-}
-
-#showNav::before {
-    border-bottom: 3px solid rgba(255, 255, 255, 0.7);
-    border-top: 9px double rgba(255, 255, 255, 0.7);
-    content: "";
-    height: 3px;
-    left: 12px;
-    position: absolute;
-    top: 14px;
-    transition: border-color 0.9s;
-    width: 20px;
-}
-
-.no-touch #showNav:hover:before {
-    border-color: rgba(255, 255, 255, 1);
-}
-
 
 nav a {
-    color: rgba(255, 255, 255, 0.7);
+    background-color: #000;
+    border-left: 1px solid #000;
+    color: #FFF;
     display: block;
-    text-transform: uppercase;
-    text-decoration: none;
-    text-align: right;
     font-size: 10px;
-    line-height: 2;
-    letter-spacing: 0.5em;
-    padding: 4px 38px 4px 40px;
-    transform: translate3d(20px, 0, 0);
-    background-color: rgba(255, 255, 255, 0.1);
-    transition: transform 0.3s, background-color 0.3s, color 0.2s 0.1s;
-    float: right;
+    height: 40px;
+    letter-spacing: 0.35em;
+    line-height: 40px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
 
 }
 
-.no-touch nav a:hover {
-    background-color: rgba(255, 255, 255, 0.3);
-    color: rgba(255, 255, 255, 1);
-    transform: translate3d(0, 0, 0);
+nav li:first-child a {
+    border-left: 0;
 }
 
-.page-home nav li:nth-child(1) a,
-.page-thoughts nav li:nth-child(2) a,
-.page-experience nav li:nth-child(3) a {
-    background-color: rgba(255, 255, 255, 0.3);
-    color: rgba(255, 255, 255, 1);
-}
+@media screen and (min-width: 690px) {
 
-.page-home nav li:nth-child(1) a:hover,
-.page-thoughts nav li:nth-child(2) a:hover,
-.page-experience nav li:nth-child(3) a:hover {
-
-    transform: translate3d(20px, 0, 0);
-}
-
-
-
-@media screen and (min-width: 840px) {
-
-    .js.csstransitions #showNav {
-        display: none;
+    nav {
+        left: 40px;
+        right: 40px;
+        top: 40px;
     }
-
-    .js.csstransitions #sidebar {
-        transform: translate3d(0, 0, 0);
-    }
-
 }
