--- a/dev/src/content/_stuff/article-03/index.hbs
+++ b/dev/src/content/_stuff/article-03/index.hbs
@@ -1,18 +1,20 @@
 ---
-section: "Work"
-page: "work"
-bodyclass: "page-work"
-title: "Work"
-
-published: true
+section: "Feed"
+bodyclass: "page-feed"
+post: true
 layout: page.hbs
+
+title: "Article three"
+pageid: "article-03"
+posted: 2014-09-20
+published: true
+
 ---
 <div class="content" id="content">
+    <h1>Article three</h1>
 
-    <h1>Work</h1>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
-
     <h2>Another second level heading</h2>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
 
