--- a/dev/src/content/_stuff/article-07/index.hbs
+++ b/dev/src/content/_stuff/article-07/index.hbs
@@ -4,15 +4,15 @@ bodyclass: "page-feed"
 post: true
 layout: page.hbs
 
-title: "Article three"
-pageid: "article-03"
+title: "Article seven"
+pageid: "article-07"
 posted: 2014-09-20
 published: true
 
 ---
 <div class="content" id="content">
     <section>
-        <h1>Article three</h1>
+        <h1>Article seven</h1>
 
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
