--- a/dev/scss/_layout.scss
+++ b/dev/scss/_layout.scss
@@ -15,15 +15,23 @@ html {
 }
 
 body {
-    background: linear-gradient(#46484C, #1A1D22 800px);
+    background-color:  #1A1D22;
+    display: flex;
+    flex-direction: row;
     font-size: 100%;
-    min-height: 100%;
     margin: 0;
+    min-height: 100%;
 }
 
 .container {
+    background: linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0)  1000px);
+    flex: 1;
     position: relative;
     z-index: 2;
+}
+
+.no-touch .container {
+    background-attachment: fixed;
 }
 
 main {
@@ -32,10 +40,19 @@ main {
 }
 
 .content {
+
+}
+
+section {
     margin: 0 auto;
     max-width: 560px;
     padding: 0 15px;
-    text-align: left;
+}
+
+section.full {
+    margin: 0 auto;
+    max-width: auto;
+    padding: 0 15px;
 }
 
 .container::before,
@@ -72,7 +89,7 @@ box-sizing: border-box;
 
 .js.csstransitions body {
     opacity: 0;
-    transition: opacity 0.6s;
+    transition: opacity 0.6s, background-color 0.3s;
 }
 
 .js.csstransitions.loaded body {
