--- a/dev/scss/_page.home.scss
+++ b/dev/scss/_page.home.scss
@@ -1,5 +1,1 @@
-
-/*
-.page-feed {
-    background-color: #302519;
-}*/
+//  ## HOME PAGE SPECIFIC  ----------------------------------------------------------//
