--- a/dev/src/content/index.hbs
+++ b/dev/src/content/index.hbs
@@ -6,33 +6,36 @@ title: "Home"
 
 published: true
 layout: page.hbs
-
 ---
-<div class="content" id="content">
-    <section>
-        <h1>Main title 1</h1>
-        <h2>Subtitle goes here</h2>
 
-        <p>I make websites. And good ones at that. Websites that have URLs that resolve to pages and don't need JavaScript for them to work. Websites that are accessible, fast and beautiful.</p>
+<section>
 
-        <h2>Some second level heading</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
-        <h2>Another second level heading</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
+    <h1>Simple, smart,&nbsp;fast</h1>
+    <h2>High performance digital&nbsp;engineering</h2>
 
-        <h3>Third level heading</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
+    <p>I’m Richard&nbsp;Stephenson, a website developer. Originally from <a href="http://en.wikipedia.org/wiki/Yorkshire" rel="external">Yorkshire</a>, I currently live in Portland, Oregon. I work for <a href="http://akqa.com" rel="external">AKQA</a> developing high performance web experiences for <a href="http://nike.com" rel="external">Nike</a> and others.</p>
 
-        <figure>
-            <picture>
-                <img src="http://placebear.com/g/800/450" alt="Place holder bears">
-            </picture>
-        </figure>
+    <p>Simple, smart, fast? Those are the keys to building world class websites.</p>
 
-        <h3>Third level heading</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
-    </section>
-</div>
+    <ul class="social-links">
+        <li class="social-link-github">
+            <a href="https://github.com/rstphnsn" rel="external">
+                <img src="/assets/images/social-icon-github.svg" width="30" height="30" alt="GitHub icon">
+                <span>GitHub</span>
+            </a>
+        </li>
+        <li class="social-link-linkedin">
+            <a href="http://www.linkedin.com/in/rstphnsn" rel="external">
+                <img src="/assets/images/social-icon-linkedin.svg" width="30" height="30" alt="LinkedIn icon">
+                <span>LinkedIn</span>
+            </a>
+        </li>
+        <li class="social-link-twitter">
+            <a href="https://twitter.com/rstphnsn" rel="external">
+                <img src="/assets/images/social-icon-twitter.svg" width="30" height="30" alt="Twitter icon">
+                <span>Twitter</span>
+            </a>
+        </li>
+    </ul>
+
+</section>
