--- a/dev/src/content/work/index.hbs
+++ b/dev/src/content/work/index.hbs
@@ -7,17 +7,37 @@ title: "Work"
 published: true
 layout: page.hbs
 ---
-<div class="content" id="content">
-    <section>
-        <h1>Work</h1>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
 
-        <h2>Another second level heading</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
+<section>
 
-        <h2>Third level heading</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
-    </section>
-</div>
+    <h1>Work</h1>
+
+    <p>I work as a Principal Web Developer at <a href="http://akqa.com">AKQA</a> in Portland, Oregon. I have been a web designer, developer and manager for over 15 years in Leeds, Manchester and London.</p>
+
+    <p>I’ve worked for a number of leading creative agencies - both full time and as a freelancer - on a wide variety of client projects for brands such as Nike, Audi, Bank of America, BBC, Dr Martens, Asda, Travis Perkins, Lakeland, InterfaceFLOR, OTTO Group, and Visit Manchester.</p>
+
+    <p>My role involves the planning and development of high performance mobile first web solutions. On a day to day basis I’m busy writing JavaScript, CSS and HTML. I also write PHP and node.js and I’m heavily involved in front-end tooling, prototyping, research and technical architecture.</p>
+
+    <h2>Recent Projects</h2>
+
+    <h3>Your Year with Nike+</h3>
+
+    <p>To celebrate the accomplishments of the top 100,00 Nike+ athletes in 2014 AKQA worked with French illustrator McBess to create unique animated videos based on each athlete’s data. I built the website to deliver them. Read what the <a href="http://blogs.wsj.com/cmo/2015/01/07/nike-and-akqa-turn-peoples-running-data-into-100000-unique-videos/" rel="external">Wall Street Journal had to say</a>.</p>
+
+    <figure>
+        <a href="https://youryear.nikeapp.com/" rel="external"><img src="/assets/images/nike-year-in-review-video-still.jpg" alt="Still from the Nike Year in Review video"></a>
+        <p><a href="https://youryear.nikeapp.com/" rel="external">View the site</a></p>
+    </figure>
+
+    <h3>AKQA.com</h3>
+
+    <p>As lead developer on <a href="http://akqa.com" rel="external">AKQA.com</a> I got to work on a great creative solution with content to match and helped produce a website that shows off all that is best about AKQA - not just the quality and breadth of our work but also our technical credentials.</p>
+
+    <p>The site itself has won a great deal of praise both internally and externally. It even won a few awards including <a href="http://www.thefwa.com/site/akqa">FWA Site of the Day</a> and was nominated for FWA Site of the Year 2014.</p>
+
+    <figure>
+        <a href="http://akqa.com" rel="external"><img src="/assets/images/akqa-com-screenshot.jpg" alt="Screen shot of the AKQA.com website"></a>
+        <p><a href="http://akqa.com" rel="external">View the site</a></p>
+    </figure>
+
+</section>
