--- a/dev/scss/_module.navigation.scss
+++ b/dev/scss/_module.navigation.scss
@@ -1,6 +1,6 @@
 //  ## MODULE - NAVIGATION  ---------------------------------------------------------//
 
-nav {
+.site-navigation {
     left: 0;
     position: fixed;
     right: 0;
@@ -8,23 +8,24 @@ nav {
     z-index: 3;
 }
 
-nav ul {
+.site-navigation ul {
     display: flex;
     margin: 0;
     padding: 0;
 }
 
-nav li {
+.site-navigation li {
     flex-grow: 1;
     list-style: none;
     overflow: hidden;
 }
 
-nav a {
+.site-navigation a {
     background-color: #000;
     color: #FFF;
     display: block;
     font-size: 10px;
+    font-weight: 700;
     height: 40px;
     letter-spacing: 0.35em;
     line-height: 40px;
@@ -33,11 +34,18 @@ nav a {
     text-transform: uppercase;
 }
 
-@media screen and (min-width: 690px) {
+.site-navigation a:hover,
+.site-navigation a:focus,
+.site-navigation a:active {
+    color: #FFF;
+}
 
-    nav {
-        left: 40px;
-        right: 40px;
-        top: 40px;
-    }
+
+.js.csstransitions .site-navigation a {
+    color: #000;
+    transition: color 0.6s;
+}
+
+.js.csstransitions.loaded .site-navigation a {
+    color: #FFF;
 }
