--- a/dev/src/templates/layouts/markdown.hbs
+++ b/dev/src/templates/layouts/markdown.hbs
@@ -1,11 +1,17 @@
 {{> head }}
-    <div class="container">
-{{> header }}
-        <main class="main">
-{{#markdown}}
-    {{> body}}
-{{/markdown}}
-        </main>
-{{> footer }}
+
+<div class="container">
+    <main class="main" id="main" data-page="{{this.pageid}}">
+        <div class="content" id="content">
+            <section>
+                {{#markdown}}
+                    {{> body}}
+                {{/markdown}}
+            </section>
+        </div>
+    </main>
 </div>
+
+{{> nav}}
+
 {{> bottom }}
