--- a/dev/src/templates/layouts/page.hbs
+++ b/dev/src/templates/layouts/page.hbs
@@ -1,16 +1,13 @@
 {{> head }}
-    <div class="container">
-        <main class="main" id="main" data-page="{{this.pageid}}">
-{{> body }}
-        </main>
-    </div>
 
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/feed/">Feed</a></li>
-            <li><a href="/work/">Work</a></li>
-        </ul>
-    </nav>
+<div class="container">
+    <main class="main" id="main" data-page="{{this.pageid}}">
+        <div class="content" id="content">
+            {{> body }}
+        </div>
+    </main>
+</div>
+
+{{> nav}}
 
 {{> bottom }}
