--- a/dev/src/templates/partials/head.hbs
+++ b/dev/src/templates/partials/head.hbs
@@ -7,9 +7,11 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
 
-    <title>{{#if this.page.data.title }}{{ this.page.data.title }} | {{/if}}RPS</title>
+    <title>{{#if this.page.data.title }}{{ this.page.data.title }} / {{/if}}STPHNSN</title>
 
     <script src="/assets/js/modernizr.custom.js"></script>
+
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800">
     <link rel="stylesheet" href="/assets/css/styles.css">
 
 </head>
